--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -15,6 +15,10 @@
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
     <title>글수정</title>
     <script>
+        if(!'[[${session.user}]]'){
+            alert("로그인 세션이 만료되어 홈으로 돌아갑니다.");
+            window.location.href="/home";
+        }
         // 툴바생략
         sm$(document).ready(function () {
 
