--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +16,10 @@
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
     <title>글쓰기</title>
     <script>
+        if (!'[[${session.user}]]') {
+            alert("로그인 세션이 만료되어 홈으로 돌아갑니다.");
+            window.location.href = "/home";
+        }
         // 툴바생략
         sm$(document).ready(function () {
 
@@ -63,18 +68,33 @@
     </script>
     <style>
         input[type="button"],
-        input[type="submit"] { background-color: #2F70FF; color: white;
-                border: 1px; border-radius: 4px; padding: 5px 5px 5px 5px;
-            }
+        input[type="submit"] {
+            background-color: #2F70FF;
+            color: white;
+            border: 1px;
+            border-radius: 4px;
+            padding: 5px 5px 5px 5px;
+        }
+
         input[type="button"]:hover,
         input[type="submit"]:hover {
-            text-decoration: none; cursor: pointer;
+            text-decoration: none;
+            cursor: pointer;
         }
-        #content { text-align: left; padding: 10px 10px 10px 10px; }
-        #contents input[type="text"] { width: 100%;  padding-left: 5px; }
+
+        #content {
+            text-align: left;
+            padding: 10px 10px 10px 10px;
+        }
+
+        #contents input[type="text"] {
+            width: 100%;
+            padding-left: 5px;
+        }
     </style>
 
 </head>
+
 <body style="display: flex; justify-content: center;">
     <style>
         #allPage {
@@ -83,15 +103,19 @@
             grid-template-rows: 1000px;
             column-gap: 10px;
         }
+
         .left_side {
             order: 1;
         }
+
         .right_side {
             order: 3;
         }
+
         #contents {
             order: 2;
-            background-color: white; border: 2px solid #5d5d5d;
+            background-color: white;
+            border: 2px solid #5d5d5d;
             padding: 30px 20px;
         }
     </style>
@@ -102,37 +126,38 @@
             <section id="left_side" th:replace="~{/fragments/left_side :: leftFragment}"></section>
             <div id="right_side" th:replace="~{/fragments/right_side :: rightFragment}"></div>
             <div id="contents">
-                            <h2>글쓰기</h2>
-            <hr>
-            <form action="/Board/Write" method="post" enctype="multipart/form-data">
-                <input hidden type="text" name="writer" id="writer" th:value="${session.user.username}">
-                <table>
-                    <tr>
-                        <td><b>제목<b></td>
-                        <td><input id="title" type="text" name="title" th:value="${title}"></td>
-                    </tr>
-                    <tr id="conttr">
-                        <td><b>내용<b></td>
-                        <td><textarea id="textar" name="cont"></textarea></td>
-                    </tr>
-                    <tr hidden>
-                        <td colspan="2">
-                            <input type="text" name="menu_id" id="menu_id" th:value="${param.menu_id}">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2" style="text-align: right;">
-                            <input type="submit" value="작성">
-                            <th:block  th:if="${boardVo.menu_id == 'MENU04'}">
-                                <input type="button" th:onclick="|location.href='@{/ImageBoard/List}'|" value="목록">
-                            </th:block>
-                            <th:block th:if="${boardVo.menu_id != 'MENU04'}">
-                                <input type="button" th:onclick="|location.href='@{List(menu_id=${param.menu_id})}'|" value="목록">
-                            </th:block>
-                        </td>
-                    </tr>
-                </table>
-            </form>
+                <h2>글쓰기</h2>
+                <hr>
+                <form action="/Board/Write" method="post" enctype="multipart/form-data">
+                    <input hidden type="text" name="writer" id="writer" th:value="${session.user.username}">
+                    <table>
+                        <tr>
+                            <td><b>제목<b></td>
+                            <td><input id="title" type="text" name="title" th:value="${title}"></td>
+                        </tr>
+                        <tr id="conttr">
+                            <td><b>내용<b></td>
+                            <td><textarea id="textar" name="cont"></textarea></td>
+                        </tr>
+                        <tr hidden>
+                            <td colspan="2">
+                                <input type="text" name="menu_id" id="menu_id" th:value="${param.menu_id}">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" style="text-align: right;">
+                                <input type="submit" value="작성">
+                                <th:block th:if="${boardVo.menu_id == 'MENU04'}">
+                                    <input type="button" th:onclick="|location.href='@{/ImageBoard/List}'|" value="목록">
+                                </th:block>
+                                <th:block th:if="${boardVo.menu_id != 'MENU04'}">
+                                    <input type="button"
+                                        th:onclick="|location.href='@{List(menu_id=${param.menu_id})}'|" value="목록">
+                                </th:block>
+                            </td>
+                        </tr>
+                    </table>
+                </form>
             </div>
         </div>
     </div>
@@ -169,4 +194,5 @@
 
 
 </script>
+
 </html>
