파일업로드해야햄

--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -16,7 +16,7 @@
     <title>글수정</title>
     <script>
         if(!'[[${session.user}]]'){
-            alert("로그인 세션이 만료되어 홈으로 돌아갑니다.");
+            alert("로그아웃이 되어 홈으로 돌아갑니다.");
             window.location.href="/home";
         }
         // 툴바생략
