--- a/src/main/resources/templates/fragments/left_side.html
+++ b/src/main/resources/templates/fragments/left_side.html
@@ -31,6 +31,7 @@
                                         style="width: 4cm;height: 0.8cm; font-size: 20px;font-weight: bold; padding-bottom: 10px;">login</button>
                                 </div>
                             </form>
+
                             <div class="caption">
                                 <a href="">Forgot Password?</a>
                                 <span>/</span><br>
@@ -42,6 +43,16 @@
                 <div id="lsidebar2">
                     <!-- <iframe width="280" height="500" frameborder=0 framespacing=0 marginheight=0 marginwidth=0
                         scrolling=yes vspace=0 src="http://192.168.0.197:8083/chat/JeaDragon"></iframe> -->
+                            <div th:if="${session.user}">
+                                <iframe width="280" height="500" frameborder=0 framespacing=0 marginheight=0 marginwidth=0
+                                    scrolling=yes vspace=0 th:src="@{'http://192.168.0.197:8084/chat/' + ${session.user.username}}"></iframe>
+                            </div>
+                            <div th:if="${session.user == null}">
+                                <iframe width="280" height="500" frameborder=0 framespacing=0 marginheight=0 marginwidth=0
+                                    scrolling=yes vspace=0 src="http://192.168.0.197:8084/chat/Guest"></iframe>
+                            </div>
+                            
+                        </div>
                 </div>
     </section>
 
