--- a/src/main/resources/templates/fragments/right_side.html
+++ b/src/main/resources/templates/fragments/right_side.html
@@ -13,10 +13,9 @@
             <p>userlist</p>
         </div>
         <div id="right_side_bottom">
-            <p>광고</p>
-            <p>광고</p>
-            <p>광고</p>
-            <p>광고</p>
+            <img src="/img/CM1X.gif" style="width: 100%;" alt="">
+            <img src="/img/CM2X.gif" style="width: 100%;" alt="">
+            <b>광고문의 : greensports@gmail.com</b>
         </div>
         
     </div>
