--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title></title>
 </head>
 <body style="display: flex; justify-content: center;">
     <style>
         #allPage {
             display: grid;
             grid-template-columns: 400px 1000px 400px;
-            grid-template-rows: 900px;
+            grid-template-rows: 1000px;
             column-gap: 10px;
         }
         .left_side {
@@ -20,20 +20,22 @@
         .right_side {
             order: 3;
         }
-        #contents { 
+        #contents {
             order: 2;
             background-color: white; border: 2px solid #5d5d5d;
+            padding: 30px 20px;
         }
     </style>
 
-<div id="wrap">
-    <header id="header" th:replace="~{/fragments/header :: headerFragment}"></header>
-    <div id="allPage">
-        <section id="left_side" th:replace="~{/fragments/left_side :: leftFragment}"></section>
-        <div id="right_side" th:replace="~{/fragments/right_side :: rightFragment}"></div>
-        <div id="contents"></div> <!-- 현재 페이지를 넣ㅎㅎ -->
+    <div id="wrap">
+        <header id="header" th:replace="~{/fragments/header :: headerFragment}"></header>
+        <div id="allPage">
+            <section id="left_side" th:replace="~{/fragments/left_side :: leftFragment}"></section>
+            <div id="right_side" th:replace="~{/fragments/right_side :: rightFragment}"></div>
+            <div id="contents">
+                <img src="/img/mainimg.png" style="width: 100%;" alt="">
+            </div>
+        </div>
     </div>
-</div>
-    
 </body>
 </html>
