뉴스랑 유저리스트 넣음

--- a/src/main/resources/templates/fragments/right_side.html
+++ b/src/main/resources/templates/fragments/right_side.html
@@ -10,7 +10,7 @@
     <div th:fragment="rightFragment" class="right_side">
         <link rel="stylesheet" href="/css/right_side.css">
         <div id="right_side_top" style="height: 400px;">
-            <p>userlist</p>
+            <iframe src="/User/homeList" frameborder="0" style="width: 100%; height: 100%;"></iframe>
         </div>
         <div id="right_side_bottom">
             <img src="/img/CM1X.gif" style="width: 100%;" alt="">
