보드리스트에 댓글갯수추가

--- a/src/main/resources/templates/board/imageList.html
+++ b/src/main/resources/templates/board/imageList.html
@@ -71,6 +71,8 @@
                     <div style="margin-top: 10px;">
                         <i class='bx bx-edit-alt'></i>
                         <span th:text="${imgList.writer}"></span>
+                        <span style="float: right;" th:text="${imgList.ccnt}"></span>
+                        <i style="float: right;" class="bx bxs-message-rounded-dots"></i>
                         <span style="float: right;" th:text="${imgList.readcount}"></span>
                         <i style="float: right;" class='bx bx-show-alt bx-tada'></i>
                         <span hidden class="hidcont" style="float: right;" th:text="${imgList.cont}"></span>
