--- a/src/main/resources/static/css/right_side.css
+++ b/src/main/resources/static/css/right_side.css
@@ -1,2 +1,2 @@
 #right_side_top { background-color: white; border: 2px solid #5d5d5d; }
-#right_side_bottom { background-color: white; border: 2px solid #5d5d5d; margin-top: 10px; }
+#right_side_bottom { background-color: white; border: 2px solid #5d5d5d; margin-top: 10px; height: 582px; }
