--- a/src/main/resources/templates/board/imageList.html
+++ b/src/main/resources/templates/board/imageList.html
@@ -73,7 +73,7 @@
                         <span th:text="${imgList.writer}"></span>
                         <span style="float: right;" th:text="${imgList.ccnt}"></span>
                         <i style="float: right;" class="bx bxs-message-rounded-dots"></i>
-                        <span style="float: right;" th:text="${imgList.readcount}"></span>
+                        <span style="float: right; margin-right: 5px;" th:text="${imgList.readcount}"></span>
                         <i style="float: right;" class='bx bx-show-alt bx-tada'></i>
                         <span hidden class="hidcont" style="float: right;" th:text="${imgList.cont}"></span>
                     </div>
