일반 보드도 댓글 뛰움

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -67,7 +67,7 @@
                             <td style="text-align: center;" th:text="${ board.idx }"></td>
                             <!-- <td style="padding-left: 10px;" th:text="${ board.title }"></td> -->
                             <td>
-                                <span style="padding-left: 10px;" th:text="${ board.title }"></span>
+                                <span style="padding: 0 10px;" th:text="${ board.title }"></span>
                                 <i class="bx bxs-message-rounded-dots"></i>
                                 <span th:text="${board.ccnt}"></span>
                             </td>
