--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -149,6 +149,7 @@
                         <tr hidden>
                             <td colspan="2">
                                 <input type="text" name="menu_id" id="menu_id" th:value="${param.menu_id}">
+                                <input type="text" name="nowpage" id="nowpage" th:value="${param.nowpage}">
                             </td>
                         </tr>
                         <tr>
