--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -156,7 +156,7 @@
         });
     }
 
-    document.querySelector('input[value="작성"]').onclick = function () {
+    document.querySelector('input[value="수정"]').onclick = function () {
         let title_text = document.querySelector('#title').value;
         let textar_text = document.querySelector('#textar').value;
         if (title_text.trim() == '') {
