--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,10 +28,10 @@
     </style>
 
     <div id="wrap">
-        <header id="header" th:replace="~{/fragments/header :: headerFragment}"></header>
+        <header id="header" th:replace="~{fragments/header :: headerFragment}"></header>
         <div id="allPage">
-            <section id="left_side" th:replace="~{/fragments/left_side :: leftFragment}"></section>
-            <div id="right_side" th:replace="~{/fragments/right_side :: rightFragment}"></div>
+            <section id="left_side" th:replace="~{fragments/left_side :: leftFragment}"></section>
+            <div id="right_side" th:replace="~{fragments/right_side :: rightFragment}"></div>
             <div id="contents">
                 <img src="/img/mainimg.png" style="width: 100%;" alt="">
             </div>
