--- a/src/main/resources/templates/board/imageList.html
+++ b/src/main/resources/templates/board/imageList.html
@@ -53,10 +53,10 @@
     </style>
 
     <div id="wrap">
-        <header id="header" th:replace="~{/fragments/header :: headerFragment}"></header>
+        <header id="header" th:replace="~{fragments/header :: headerFragment}"></header>
         <div id="allPage">
-            <section id="left_side" th:replace="~{/fragments/left_side :: leftFragment}"></section>
-            <div id="right_side" th:replace="~{/fragments/right_side :: rightFragment}"></div>
+            <section id="left_side" th:replace="~{fragments/left_side :: leftFragment}"></section>
+            <div id="right_side" th:replace="~{fragments/right_side :: rightFragment}"></div>
             <div id="contents">
                 <h2 style="text-align: center;margin: 10px 0 10px 0;">갤러리</h2>
                 <hr style="margin-bottom: 10px;">
