--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -50,10 +50,10 @@
     </style>
 
     <div id="wrap">
-        <header id="header" th:replace="~{/fragments/header :: headerFragment}"></header>
+        <header id="header" th:replace="~{fragments/header :: headerFragment}"></header>
         <div id="allPage">
-            <section id="left_side" th:replace="~{/fragments/left_side :: leftFragment}"></section>
-            <div id="right_side" th:replace="~{/fragments/right_side :: rightFragment}"></div>
+            <section id="left_side" th:replace="~{fragments/left_side :: leftFragment}"></section>
+            <div id="right_side" th:replace="~{fragments/right_side :: rightFragment}"></div>
             <div id="contents">
                 <div id="mainlist" style="height: 880px;">
                     <h2 style="text-align: center;" th:text="${menu.menu_name}"></h2>
