--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -122,10 +122,10 @@
     </style>
 
     <div id="wrap">
-        <header id="header" th:replace="~{/fragments/header :: headerFragment}"></header>
+        <header id="header" th:replace="~{fragments/header :: headerFragment}"></header>
         <div id="allPage">
-            <section id="left_side" th:replace="~{/fragments/left_side :: leftFragment}"></section>
-            <div id="right_side" th:replace="~{/fragments/right_side :: rightFragment}"></div>
+            <section id="left_side" th:replace="~{fragments/left_side :: leftFragment}"></section>
+            <div id="right_side" th:replace="~{fragments/right_side :: rightFragment}"></div>
             <div id="contents">
                 <h2>글쓰기</h2>
                 <hr>
