이름만 변경

--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -303,8 +303,8 @@
 
 
 
-    let fuck = document.getElementById('hidcont').innerText;
-    $('#cont').append(fuck);
+    let hidcontEL = document.getElementById('hidcont').innerText;
+    $('#cont').append(hidcontEL);
     $('#board_set input[value="삭제"]').click(function () {
         if (confirm('게시글을 정말 삭제하시겠습니까?') == true) {
             alert('게시글을 삭제 하였습니다.');
